# fastchat-mcp

./: .env.example  .gitignore  MANIFEST.in  README.md  fastchat.config.example.json  pyproject.toml  requirements.txt
doc/: API_WEBSOCKET.md  CHANGELOG.md  CLEANUP_IMPLEMENTATION.md  USAGE.md
doc/wiki/: WIKI.md
examples/custom_api/: fastchat.config.json
src/fastchat/api/: settings.py
src/fastchat/api/routes/: chat.py
src/fastchat/app/chat/: chat.py
src/fastchat/app/chat/features/: step.py
src/fastchat/app/mcp_manager/: client.py
src/fastchat/app/mcp_manager/services/: service.py
src/fastchat/app/mcp_manager/services/resource/: resource.py
src/fastchat/app/mcp_manager/sessions/: httpstrem.py
src/fastchat/app/services/llm/: llm.py
src/fastchat/app/services/llm/models/litellm_service/: litellm_model.py
src/fastchat/app/services/llm/models/openai_service/: gpt.py
src/fastchat/app/services/llm/prompts/: system_prompts.py  user_prompts.py
src/fastchat/app/services/llm/prompts/texts/: system_prompts.yaml  system_prompts_es.yaml
src/fastchat/config/: __init__.py  auth_api.py  llm_config.py  logger.py
src/fastchat/local/: local_chat.py
tests/api/websocket/: chating.py
